improve performance and fix title width on mobile

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,71 +1,71 @@
 .demo-container {
-    width: 100%;
-    min-width: 100%;
+	width: 100%;
+	min-width: 100%;
+	max-width: 100%;
 
-    height: 100vh;
+	height: 100vh;
 
-    overflow: hidden;
-    z-index: -999;
+	overflow: hidden;
+	z-index: -999;
 }
 
 .demo-body {
-    position: absolute;
-    
-    min-height: 100%;
-    height: 100%;
-    
-    width: 100%;
-    min-width: 100%;
+	min-height: 100%;
+	height: 100%;
+	
+	width: 100%;
+	min-width: 100%;
 
-    z-index: -998;
+	z-index: -998;
 }
 
 .demo-item {
-    position: absolute;
+	position: absolute;
 }
 
 .demo-body video {
-    object-fit: cover;
-    
-    height: 100vh;
-    width: 100%;
+	object-fit: cover;
+	
+	height: 100vh;
+	width: 100%;
 
-    /* aspect-ratio: 0; */
-    /* object-fit: cover; */
-    
-    margin-left: 50vw;
-    transform: translate(-50%);
-    
-    /* scale: 1.025; */
-    
-    filter: blur(2px);
-  }
-  
-  .demo-title {
-    object-fit: cover;
+	/* filter: blur(2px); */
+}
 
-    padding: 32px;
+.demo-filter {
+	height: 100vh;
+	width: 100%;
 
-    min-width: 128px;
-    width: 512px;
+	backdrop-filter: blur(3px);
+	color: #4263e8b9;
+}
 
-    margin-top: 25vh;
-    margin-left: 50vw;
-    transform: translate(-50%);
-    
-    background: #4263e8;
-    box-shadow: 0 0 5px 5px #22222277;
-    
-    height: auto;
-    color: #fff;
-    font-size: 24px;
-    font-weight: 600;
-    text-align: center;
-    text-transform: uppercase;
-  }
-  
-  .container {
-    min-height: 100vh;
-  
-    background: #222;
-  }
+.demo-title {
+	object-fit: cover;
+
+	padding: 32px;
+
+	min-width: 256px;
+	width: 512px;
+	max-width: 100vw;
+
+	margin-top: 25vh;
+	margin-left: 50vw;
+	transform: translate(-50%);
+	
+	background: #4263e8;
+	box-shadow: 0 0 5px 5px #22222277;
+	
+	height: auto;
+	color: #fff;
+	font-size: 24px;
+	font-weight: 600;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.container {
+	min-height: 100vh;
+
+	background: #222;
+}
